--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-image-zooom": "^1.0.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
