feat: components added with typescript

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-toastify": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-zooom": "^1.0.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react-icons": "^3.0.0",
+    "@types/react-medium-image-zoom": "^3.0.1",
     "@types/react-router-dom": "^5.3.3"
   }
 }
