--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-medium-image-zoom": "^3.0.1",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2"
   }
 }
